--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,27 @@
-
 #button2{
 	-fx-pref-width: 250;
 	-fx-padding: 15 30 15 30;
 	-fx-font-weight: bold;
 	-fx-font-family: Helvetica;
 	 -fx-background-insets: 0,1,4,5;
+}
+
+#pane{
+	-fx-alignment :  center;
+}
+
+.button{
+	-fx-pref-width: 250;
+	-fx-padding: 15 30 15 30;
+	-fx-font-weight: bold;
+	-fx-font-family: Helvetica;
+	 -fx-background-insets: 0,1,4,5;
+}
+
+.titre{
+	
+}
+
+.question{
+	
 }
